# spf

./: .gitignore  Cargo.toml  README.md
mux_circuits/: Cargo.toml  README.md
mux_circuits/src/: .gitattributes  add.rs  and.rs  bitshift.rs  cache.rs  comparisons.rs  error.rs  graph_ops.rs  lib.rs  mul.rs  neg.rs  opt.rs  or.rs  sub.rs  util.rs
mux_circuits/src/data/: gradeschool-reduction-n64-m64  multiplier-n16-m16  multiplier-n32-m32  multiplier-n8-m8
parasol_concurrency/: Cargo.toml
parasol_concurrency/benches/: mutex.rs
parasol_concurrency/src/: lib.rs
parasol_cpu/: Cargo.toml  README.md  crates-io.md
parasol_cpu/benches/: auction.rs  cardio.rs  chi_squared.rs  hamming.rs  prng.rs  transfer.rs
parasol_cpu/benches/programs/: chi_squared.rs  mod.rs
parasol_cpu/src/: error.rs  lib.rs  runner.rs  test_utils.rs  util.rs
parasol_cpu/src/memory/: mod.rs
parasol_cpu/src/memory/test_data/: cardio
parasol_cpu/src/proc/: args.rs  assembly.rs  fhe_processor.rs  mod.rs  program.rs
parasol_cpu/src/proc/ops/: add.rs  and.rs  bitshift.rs  casting.rs  cea.rs  cmux.rs  comparisons.rs  dbg.rs  input_output.rs  load.rs  loadi.rs  mod.rs  mov.rs  mul.rs  neg.rs  not.rs  or.rs  store.rs  sub.rs  xor.rs
parasol_cpu/src/proc/tests/: add.rs  and.rs  bitshift.rs  branch.rs  call_abi.rs  casting.rs  cmux.rs  comparisons.rs  dbg.rs  faults.rs  input_output.rs  load_store.rs  mod.rs  mov.rs  mul.rs  neg.rs  not.rs  or.rs  sub.rs  xor.rs
parasol_cpu/src/tomasulo/: mod.rs  registers.rs  scoreboard.rs  tomasulo_processor.rs
parasol_cpu/tests/: add.rs  cardio.rs  chi_sq.rs  cmux.rs  e2e.rs  examples.rs  vector_add.rs
parasol_cpu/tests/e2e_tests/: add.rs  args.rs  auction.rs  cardio.rs  chi_sq.rs  cmux.rs  for_loop.rs  hamming_distance.rs  loopy.rs  mod.rs  payment.rs  prng.rs  transfer.rs  vector_add.rs  zext_and_trunc.rs
parasol_cpu/tests/test_data/: .gitignore  add  args  auction  cardio  chi_sq  cmux  for_loop  hamming_distance  loopy  payment  prng  transfer  vector_add  zext_and_trunc
parasol_cpu/tests/test_src/: Makefile
parasol_cpu/tests/test_src/add/: Makefile  add.c
parasol_cpu/tests/test_src/args/: Makefile  args.c
parasol_cpu/tests/test_src/auction/: Makefile  auction.c
parasol_cpu/tests/test_src/cardio/: .cardio.s.swp  Makefile  cardio.c  cardio.s
parasol_cpu/tests/test_src/chi_sq/: Makefile  chi_sq.c
parasol_cpu/tests/test_src/cmux/: Makefile  cmux.c
parasol_cpu/tests/test_src/for_loop/: Makefile  for_loop.c
parasol_cpu/tests/test_src/hamming_distance/: Makefile  hamming_distance.c
parasol_cpu/tests/test_src/loopy/: Makefile  loopy.c
parasol_cpu/tests/test_src/payment/: .payment.s.swp  Makefile  payment.c  payment.s
parasol_cpu/tests/test_src/prng/: Makefile  prng.c
parasol_cpu/tests/test_src/transfer/: Makefile  transfer.c
parasol_cpu/tests/test_src/vector_add/: .vector_add.s.swp  Makefile  vector_add.c  vector_add.s
parasol_cpu/tests/test_src/zext_and_trunc/: Makefile  zext_and_trunc.c
parasol_cpu_macros/: Cargo.toml  README.md
parasol_cpu_macros/src/: lib.rs
parasol_runtime/: .gitignore  Cargo.toml  README.md  crates-io.md
parasol_runtime/benches/: fhe_ops.rs  ops.rs
parasol_runtime/examples/op_noise/: args.rs  cbs.rs  cmux.rs  cmux_tree.rs  error.rs  lwe_keyswitch.rs  main.rs  math.rs  metadata.rs  noise.rs  rlwe_public_key.rs  scheme_switch.rs  secret_key_encryption.rs
parasol_runtime/noise_analysis/: analyze_cbs.json  analyze_cmux.json  analyze_scheme_switch.json  lwe_keyswitch.json  rlwe_public_key.json  secret_key_encryption.json
parasol_runtime/src/: error.rs  fhe_circuit.rs  lib.rs  metadata.rs  params.rs  safe_bincode.rs  test_utils.rs
parasol_runtime/src/circuit_processor/: completion_handler.rs  mod.rs  runtime_error.rs  task.rs
parasol_runtime/src/circuit_processor/tests/: faults.rs  mod.rs
parasol_runtime/src/circuits/: add.rs  mod.rs  mul.rs
parasol_runtime/src/crypto/: ciphertext.rs  encryption.rs  evaluation.rs  keys.rs  mod.rs  recryption.rs  transciphering.rs
parasol_runtime/src/fluent/: bit.rs  dynamic_generic_int.rs  dynamic_generic_int_graph_nodes.rs  generic_int.rs  generic_int_graph_nodes.rs  gint.rs  int.rs  mod.rs  packed_dynamic_generic_int_graph_node.rs  packed_generic_int.rs  packed_generic_int_graph_node.rs  recrypted_int.rs  transciphered_int.rs  uint.rs
sunscreen_math/: Cargo.toml  README.md
sunscreen_math/src/: lib.rs  misc_traits.rs  security.rs
sunscreen_math/src/poly/: mod.rs
sunscreen_math/src/ring/: barrett.rs  mod.rs
sunscreen_math_macros/: Cargo.toml  README.md
sunscreen_math_macros/src/: lib.rs
sunscreen_tfhe/: Cargo.toml  README.md
sunscreen_tfhe/benches/: fft.rs  ops.rs
sunscreen_tfhe/notes/: leveled_computation.md
sunscreen_tfhe/src/: dst.rs  high_level.rs  lib.rs  params.rs  rand.rs  scratch.rs  zkp.rs
sunscreen_tfhe/src/entities/: automorphism_key.rs  automorphism_key_fft.rs  bivariate_lookup_table.rs  blind_rotation_shift.rs  bootstrap_key.rs  circuit_bootstrapping_private_keyswitch_keys.rs  ggsw_ciphertext.rs  ggsw_ciphertext_fft.rs  glev_ciphertext.rs  glev_ciphertext_fft.rs  glwe_ciphertext.rs  glwe_ciphertext_fft.rs  glwe_ciphertext_list.rs  glwe_keyswitch_key.rs  glwe_keyswitch_key_fft.rs  glwe_secret_key.rs  lev_ciphertext.rs  lwe_ciphertext.rs  lwe_ciphertext_list.rs  lwe_keyswitch_key.rs  lwe_public_key.rs  lwe_secret_key.rs  mod.rs  polynomial.rs  polynomial_fft.rs  polynomial_list.rs  private_functional_keyswitch_key.rs  public_functional_keyswitch_key.rs  rlwe_public_key.rs  scheme_switch_key.rs  scheme_switch_key_fft.rs  univariate_lookup_table.rs
sunscreen_tfhe/src/math/: basic.rs  goldilocks_field.rs  mod.rs  polynomial.rs  radix.rs  torus.rs
sunscreen_tfhe/src/math/simd/: avx2.rs  mod.rs  scalar.rs
sunscreen_tfhe/src/ops/: fft_ops.rs  mod.rs
sunscreen_tfhe/src/ops/automorphisms/: mod.rs
sunscreen_tfhe/src/ops/bootstrapping/: blind_rotation.rs  circuit_bootstrapping.rs  programmable_bootstrapping.rs  scheme_switch.rs
sunscreen_tfhe/src/ops/ciphertext/: glev_ciphertext_ops.rs  glwe_ciphertext_ops.rs  (+2 more)
(+32 files in other folders)
