[package]
name = "mux_circuits"
version = "0.9.0"
edition = "2024"
rust-version = "1.85.0"
license = "AGPL-3.0-only"
description = "This crate contains the Sunscreen Torus FHE (TFHE) implementation"
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "TFHE", "lattice", "cryptography"]
categories = ["cryptography"]

[dependencies]
biodivine-lib-bdd = { workspace = true }
bincode = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
sunscreen_math = { workspace = true }

[dev-dependencies]
rand = { workspace = true }