[package]
name = "parasol_concurrency"
version = "0.9.0"
edition = "2024"
authors = ["Sunscreen"]
rust-version = "1.85.0"
license = "AGPL-3.0-only"
description = "This crate contains generally useful concurrency primitives."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/spf"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "TFHE", "lattice", "cryptography"]
categories = ["cryptography"]

[dependencies]
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "mutex"
harness = false
