[package]
name = "parasol_cpu_macros"
version = "0.9.0"
edition = "2024"
authors = ["Sunscreen"]
rust-version = "1.87.0"
license = "AGPL-3.0-only"
description = "This crate supports the Parasol CPU."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/spf"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "TFHE", "lattice", "cryptography"]
categories = ["cryptography"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.81"
syn = "2.0.60"

[dev-dependencies]
prettyplease = "0.2.19"
