[package]
name = "parasol_runtime"
version = "0.9.0"
edition = "2024"
authors = ["Sunscreen"]
rust-version = "1.87.0"
license = "AGPL-3.0-only"
description = "This crate supports the Parasol CPU, providing key generation, encryption, and FHE evaluation functionality."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/spf"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "TFHE", "lattice", "cryptography"]
categories = ["cryptography"]

[dependencies]
bincode = { workspace = true }
bumpalo = { workspace = true }
log = { workspace = true }
mux_circuits = { workspace = true }
num = { workspace = true }
parasol_concurrency = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sunscreen_tfhe = { workspace = true }
sysinfo = "0.35.1"
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0.98"
benchmark_system_info = { workspace = true }
chrono = "0.4.41"
clap = { workspace = true }
criterion = { workspace = true }
indicatif = { workspace = true }
ndarray = "0.16.1"
scirs2-optimize = "0.1.0-alpha.3"
sunscreen_math = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
debug = []

[[bench]]
harness = false
name = "ops"

[[bench]]
harness = false
name = "fhe_ops"

[[example]]
name = "op_noise"
