[package]
name = "sunscreen_tfhe"
version = "0.9.0"
edition = "2024"
authors = ["Sunscreen"]
rust-version = "1.85.0"
license = "AGPL-3.0-only"
description = "This crate contains the Sunscreen Torus FHE (TFHE) implementation"
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "TFHE", "lattice", "cryptography"]
categories = ["cryptography"]

[dependencies]
aligned-vec = { workspace = true }
bytemuck = { workspace = true }
num = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
raw-cpuid = { workspace = true }
rayon = { workspace = true }
realfft = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
sunscreen_math = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "ops"
harness = false
